--- a/templates/base.html
+++ b/templates/base.html
@@ -25,7 +25,7 @@
         <nav>
             <div class="nav_header wow fadeInDown" data-wow-duration="1s">
                 <div class="wrapper">
-                    <img src="{{ url_for("static", filename="images/Logo.svg")}}" alt="CELLA.FM">
+                    <svg src="{{ url_for("static", filename="images/Logo.svg")}}" alt="CELLA.FM"></svg>
                 </div>
             </div>
             
