--- a/static/css/main.css
+++ b/static/css/main.css
@@ -94,7 +94,7 @@ nav .nav_player:hover {
     cursor: pointer;
 }
 
-nav .nav_player img {
+nav .nav_player svg {
     float: left;
     height: 100%;
 }
