--- a/templates/resident.html
+++ b/templates/resident.html
@@ -19,5 +19,5 @@
 <script>
     var header = $('.res_header');
     var img = $('.res_header').attr('data-img');
-    header.css('background-image', "{{ url_for("static", filename="uploads/" + artist.img".js")}}")
+    header.css('background-image', "{{ url_for("static", filename="uploads/" + artist.img + ".js")}}")
 </script>
