--- a/templates/resident.html
+++ b/templates/resident.html
@@ -4,7 +4,7 @@
     
     <div class="res col-md-6">
         <button class="btn back_button"> Back </button>
-        <div class="res_header" data-img="{{ url_for("static", filename="uploads/" + artist.img + ".js")}}">
+        <div class="res_header" data-img="{{ url_for("static", filename="uploads/" + artist.img + ".jpg")}}">
             
         </div>
 
