--- a/templates/base.html
+++ b/templates/base.html
@@ -25,7 +25,7 @@
         <nav>
             <div class="nav_header wow fadeInDown" data-wow-duration="1s">
                 <div class="wrapper">
-                    <svg id="Layer_1" data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 722.35 185.94"><defs><style>.cls-1,.cls-2{isolation:isolate;}.cls-2{font-size:142.76px;fill:#dbad6a;font-family:Montserrat-Bold, Montserrat;font-weight:700;}.cls-3{letter-spacing:0em;}.cls-4{letter-spacing:0em;}</style></defs><title>Logo</title><g id="REDLIGHT.FM" class="cls-1"><text class="cls-2" transform="translate(0 121.42)">CEL<tspan class="cls-3" x="275.52" y="0">L</tspan><tspan class="cls-4" x="356.32" y="0">A.FM</tspan></text></g></svg>
+                    <img src="{{ url_for("static", filename="images/logo.png")}}" alt="CELLA.FM">
                 </div>
             </div>
             
