--- a/static/css/main.css
+++ b/static/css/main.css
@@ -62,7 +62,7 @@ nav .nav_header {
     height: 70px;
 }
 
-nav .nav_header svg {
+nav .nav_header img {
     height: 40px;
     margin-top: 20px;
     padding: 0;
